add LLM code